--- a/sample-common/src/main/resources/sample-common.conf
+++ b/sample-common/src/main/resources/sample-common.conf
@@ -22,6 +22,7 @@ akka.http {
     max-retries = 0
   }
   server {
+    preview.enable-http2 = on
     idle-timeout = 90.seconds
     request-timeout = 20.seconds
   }
