--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,12 +1,13 @@
-version = 2.0.0-RC8
+version = 2.0.1
 style = defaultWithAlign
 lineEndings = unix
 encoding = "UTF-8"
 project.git = true
 docstrings = JavaDoc
 maxColumn = 120
-//indentOperator = spray
+indentOperator = spray
 unindentTopLevelOperators = true
+align.tokens = [{code = "=>", owner = "Case"}]
 align.openParenDefnSite = false
 align.openParenCallSite = false
 optIn.breakChainOnFirstMethodDot = false
