--- a/sample-scheduler-job/src/test/resources/application.conf
+++ b/sample-scheduler-job/src/test/resources/application.conf
@@ -1,7 +1,7 @@
 include "sample-common.conf"
 fusion.jdbc.default {
   poolName = "sample"
-  jdbcUrl = "jdbc:h2:mem:sample;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE"
+  jdbcUrl = "jdbc:postgresql://localhost:55432/sample?reWriteBatchedInserts=true"
   username = "devuser"
   password = "Devpass.2019"
   connectionTestQuery = "select 1;"
