--- a/sample-common/src/main/resources/sample-common.conf
+++ b/sample-common/src/main/resources/sample-common.conf
@@ -6,12 +6,6 @@ akka {
 
   actor {
     enable-additional-serialization-bindings = on
-    allow-java-serialization = off
-    serializers {
-      java = "com.twitter.chill.akka.AkkaSerializer"
-      kryo = "com.twitter.chill.akka.AkkaSerializer"
-      //proto = "akka.remote.serialization.ProtobufSerializer"
-    }
   }
 }
 akka.http {
@@ -22,6 +16,7 @@ akka.http {
     max-retries = 0
   }
   server {
+    preview.enable-http2 = on
     idle-timeout = 90.seconds
     request-timeout = 20.seconds
   }
