--- a/sample-discovery/src/test/resources/application.conf
+++ b/sample-discovery/src/test/resources/application.conf
@@ -1,1 +1,13 @@
 include "sample-common.conf"
+fusion.discovery {
+  enable = true
+  nacos {
+    #serverAddr =
+    #namespace =
+    #dataId =
+    group = "DEFAULT_GROUP"
+    timeoutMs = 3000
+    #serviceName =
+    #autoRegisterInstance = true
+  }
+}
