--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = 2.1.0
+version = 2.2.2
 style = defaultWithAlign
 lineEndings = unix
 encoding = "UTF-8"
@@ -7,23 +7,13 @@ docstrings = JavaDoc
 maxColumn = 120
 indentOperator = spray
 unindentTopLevelOperators = true
-align.tokens = [{code = "=>", owner = "Case"}]
-align.openParenDefnSite = false
-align.openParenCallSite = false
+align.tokens               = [{code = "=>", owner = "Case"}]
+align.openParenDefnSite    = false
+align.openParenCallSite    = false
 optIn.breakChainOnFirstMethodDot = false
 optIn.configStyleArguments = false
 danglingParentheses = false
-includeCurlyBraceInSelectChains = true
-//includeNoParensInSelectChains = true
-//verticalMultiline.atDefnSite = true
-//verticalMultiline.arityThreshold = 3
-spaces.inImportCurlyBraces = false
-newlines.alwaysBeforeTopLevelStatements = true
-rewrite.rules = [RedundantParens, AvoidInfix, SortModifiers, PreferCurlyFors, ExpandImportSelectors]
-rewrite.sortModifiers.order = [
-  "implicit", "final", "sealed", "abstract",
-  "override", "private", "protected", "lazy"
-]
+spaces.inImportCurlyBraces = true
 rewrite.neverInfix.excludeFilters = [
   and
   min
